--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,36 +1,46 @@
+// Mixin para estilos de enlace del pie de página
+@mixin footer-link-style {
+  text-decoration: none;
+  color: #fff;
+}
+
 /* Pie de página */
 footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    clear: both;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  clear: both;
 
-    .footer-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .social-media {
-      float: left;
-    }
-    .contact-info {
-      float: right;
-      ul {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        li {
-          display: inline;
-          margin-left: 10px;
-          a {
-            text-decoration: none;
-            color: #fff;
-          }
-        }
-      }
-      p {
-        margin: 0;
-        line-height: 1.5;
-      }
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .social-media {
+    float: left;
+    a {
+      @include footer-link-style; // Uso del mixin para los enlaces de redes sociales
     }
   }
+
+  .contact-info {
+    float: right;
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      li {
+        display: inline;
+        margin-left: 10px;
+        a {
+          @include footer-link-style; // Uso del mixin para los enlaces de contacto
+        }
+      }
+    }
+    p {
+      margin: 0;
+      line-height: 1.5;
+    }
+  }
+}
